<resources>
    <string name="app_name">Sky Guy</string>
    <string name="game_title">Title of the game</string>
    <string name="rabbit">A bunny rabbit</string>
    <string name="hatguy">guy with a hat</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="l">L</string>
    <string name="s">S</string>
    <string name="sky_guy">Sky Guy</string>
    <string name="gamedesc">Survive an endless flock of birds for as long as you can!</string>
    <string name="help">help</string>
    <string name="home">Home</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="test">Test</string>
    <string name="AboutUs">About Us</string>
    <string name="AboutUsText">This app was developed by Jesus Sanchez and Alan Sonnheim for the class COMP SCI 292 in the Fall 2025 semester.</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_info">sancj03@uwgb.edu and sonnad18@uwgb.edu</string>
    <string name="wi_fi_status">Wi-Fi Status</string>
    <string name="welcome_to">Welcome to</string>
    <string name="top_score_0">Top Score: 0</string>
    <string name="current_avatar">Current Avatar</string>
    <string name="todo">TODO</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="video_tutorial">Video Tutorial</string>
    <string name="reset_leaderboard">Reset Leaderboard</string>
</resources>