<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e7dfc2"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="228dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/home"
            android:onClick="restart" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mouldycheese"
            android:gravity="bottom"
            android:padding="8dp"
            android:text="@string/settings"
            android:textSize="32sp"
            tools:ignore="MissingConstraints" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/mouldycheese"
            android:text="@string/wi_fi_status"
            android:textSize="32sp"/>
        <TextView
            android:id="@+id/wifi_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/mouldycheese"
            android:text="Wi-Fi Status: Unknown"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/avatar_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/current_avatar"
            android:fontFamily="@font/mouldycheese"
            android:textSize="32sp"
            android:layout_gravity="center_horizontal"/>
        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/rabbit"/>
        <Button
            android:id="@+id/selectAvatarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:backgroundTint="#bb8044"
            android:fontFamily="@font/kenney_blocks"
            android:textSize="24sp"
            android:text="Choose Avatar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/mouldycheese"
            android:text="@string/AboutUs"
            android:textSize="32sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/mouldycheese"
            android:text="@string/AboutUsText"
            android:padding="8dp"
            android:textSize="24sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/mouldycheese"
            android:text="@string/contact_us"
            android:textSize="32sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/mouldycheese"
            android:text="@string/contact_us_info"
            android:padding="8dp"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>