<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#e7dfc2">
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/home"

            android:onClick="restart" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fontFamily="@font/mouldycheese"
            android:text="@string/leaderboard"
            android:textSize="32sp"
            android:padding="8dp"
            android:gravity="center"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/score1Avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/rabbit"/>
            <TextView
                android:id="@+id/score1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mouldycheese"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textSize="24sp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/score2Avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/rabbit"/>
            <TextView
                android:id="@+id/score2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mouldycheese"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textSize="24sp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/score3Avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/rabbit"/>
            <TextView
                android:id="@+id/score3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mouldycheese"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textSize="24sp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/score4Avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/rabbit"/>
            <TextView
                android:id="@+id/score4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mouldycheese"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textSize="24sp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/score5Avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/rabbit"/>
            <TextView
                android:id="@+id/score5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mouldycheese"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textSize="24sp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/score6Avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/rabbit"/>
            <TextView
                android:id="@+id/score6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mouldycheese"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textSize="24sp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/score7Avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/rabbit"/>
            <TextView
                android:id="@+id/score7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mouldycheese"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textSize="24sp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/score8Avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/rabbit"/>
            <TextView
                android:id="@+id/score8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mouldycheese"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textSize="24sp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/score9Avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/rabbit"/>
            <TextView
                android:id="@+id/score9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mouldycheese"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textSize="24sp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/score10Avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/rabbit"/>
            <TextView
                android:id="@+id/score10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mouldycheese"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textSize="24sp"
                android:gravity="center"/>
        </RelativeLayout>
        <Button
            android:id="@+id/resetLeaderboardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:backgroundTint="#bb8044"
            android:fontFamily="@font/kenney_blocks"
            android:textSize="20sp"
            android:text="@string/reset_leaderboard"
            android:onClick="resetLeaderboard"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>